(library
 (name dpt)
 (public_name dpt)
 (libraries
   batteries
   ANSITerminal)
 (modules
   console
   foo
   input
   interp
   span
   syntax
   var
   parser
   lexer)  
 (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))

(include_subdirs unqualified)