(library
 (name dpt)
 (public_name dpt)
 (libraries
   batteries
   ANSITerminal)
 (modules
   console
   id
   input
   interp
   printing
   span
   syntax
   parser
   lexer)  
 (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))

(include_subdirs unqualified)