(library
 (name dpt)
 (public_name dpt)
 (libraries
   batteries
   zarith
   ANSITerminal)
 (modules
   console
   id
   cid
   input
   integer
   interp
   printing
   span
   syntax
   packetSource
   parser
   lexer)  
 (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))

(include_subdirs unqualified)